Bug Fix: Prevented cross-organization data leak in EvaluationCycle module (#634)
- This PR enhances data security in the EvaluationCycle module by
ensuring that all operations are strictly restricted to the logged-in
user’s organization.
- It eliminates a potential cross-tenant data leak where evaluation
cycles could previously be accessed in different organizations.